[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repomind"
version = "1.0.0"
description = "AI agent that understands, plans, and rewrites code repositories on demand"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "langchain>=0.2.16",
    "langchain-core>=0.2.38",
    "langchain-openai>=0.1.23",
    "langchain-community>=0.2.16",
    "openai>=1.45.0",
    "PyGithub>=2.3.0",
    "gitpython>=3.1.43",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "tree-sitter>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.setuptools]
packages = ["api", "agent", "config", "prompts", "tools"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"